se corrigieron errores de rutas
rutas de estilo y de js.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <section class="service contenedor" id="servicio">
         <h2 class="subtitulo">Quienes somos</h2>
         <div class="contenedor-servicio">
-          <img src="img/chef.svg" alt="" class="eso" />
+          <img src="/img/chef.svg" alt="" class="eso" />
           <div class="checklist servicio">
             <div class="service">
               <h3 class="n-service">
@@ -219,7 +219,7 @@
       </div>
     </footer>
     <!--insercion de documento js-->
-    <script src="/menu.js"></script>
-    <script src="/ligthbox.js"></script>
+    <script src="menu.js"></script>
+    <script src="ligthbox.js"></script>
   </body>
 </html>
